# esp32-internetinis-mygtukas

./: CMakeLists.txt  Makefile  README.md
main/: CMakeLists.txt  Kconfig.projbuild  gpio.c  gpio.h  main.c  puslapis.h  restart.c  restart.h  web_server.c  web_server.h  wifi.c  wifi.h
